crates/pitboard/tests/snapshots/contract__use_signed_out_unknown_tool.snap
---
source: crates/pitboard/tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 1,
  "envelope": {
    "v": 1,
    "command": "use",
    "ok": false,
    "data": null,
    "warnings": [],
    "error": {
      "code": "provider_unknown",
      "message": "`nothing` is not a tool pitboard knows. It knows: claude, codex, desktop.",
      "cause": null
    }
  }
}
